--- a/io_prj_server/public/stylesheets/style.css
+++ b/io_prj_server/public/stylesheets/style.css
@@ -21,6 +21,10 @@ header {
   background-color: #f4f4f4;
 }
 
+header nav{
+  padding-right: 50px;
+}
+
 body {
   padding-top: 80px; 
 }
@@ -74,6 +78,7 @@ main {
 
 #content {
   width: 70%;
+  margin-top: 110px;
 }
 
 .post {
@@ -116,6 +121,7 @@ footer {
   padding: 10px;
   padding-left: 30px;
   margin-top: 100px;
+  
 }
 
 nav ul li a:hover {
@@ -195,6 +201,7 @@ main {
 
 .faq{
   display: flex;
+  margin-top: 100px;
   flex-direction: column;
   padding: 40px;
 }
