--- a/io_prj_server/views/project_view.ejs
+++ b/io_prj_server/views/project_view.ejs
@@ -232,6 +232,8 @@
     </div>
   </div>
 
+  <embed type="text/html" src="/message/room/<%= project.data.public_message_room_id %>" width="600" height="800">
+
 
   <div id="notifications-container" style="display: none; position: fixed; top: 200px; right: 550px;"></div>
 </body>
